# kinozal

./: README.md  docker-compose.yaml
admin_panel/: .env_deploy  README.md  docker-compose.yaml  pyproject.toml
admin_panel/app/: Dockerfile  data.json  entrypoint.sh
async_api/: .env_deploy  README.md  docker-compose.yaml  pyproject.toml
async_api/nginx/: site.conf
async_api/src/: Dockerfile  exper.py  main.py  requirements.txt
async_api/src/api/v1/: film.py
async_api/src/core/: config.py
async_api/src/models/: film.py  schema_film.py
async_api/src/services/: film.py
etl/: Dockerfile  README.md  docker-compose.yaml  main.py
etl/app/: .env_deploy  main.py  requirements.txt  settings.py
etl/app/pg_to_es/loaders/: movies.py
etl/etl/: settings.py  storage.json
etl/pg_to_es/: movies.py
etl/pg_to_es/schema/: schema.py
nginx/: site.conf
