[tool.poetry]
name = "kinozal"
version = "0.0.1"
description = ""
authors = ["T23 <petr777@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.61.1"
pydantic = "1.9.0"
uvicorn = "0.12.2"
aioredis = "1.3.1"
orjson = "3.4.1"
elasticsearch = {version = "7.9.1", extras = ["async"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
